[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supportops-env"
version = "1.0.0"
description = "OpenEnv-compliant customer support triage RL environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "SupportOps-Env Team" }]
keywords = ["reinforcement-learning", "openenv", "support", "nlp", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    # Client / inference
    "httpx>=0.25.0",
    "openai>=1.0.0",
    # OpenEnv validation CLI (dev)
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supportops_env*"]

[project.scripts]
supportops-server = "server.app:main"
